xsl/html: enhance TableControl/GShapeObjectControl positions

--- a/pyhwp-tests/hwp5_tests/fixtures/borderfill.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/borderfill.html.d/index.formatted.xhtml
@@ -25,8 +25,54 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-3" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-4" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr></table>&#13;</p>
-          <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-7" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-8" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr></table>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <table cellspacing="0" class="TableControl borderfill-2" style="  width: 148mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
+            <tr>
+              <td class="borderfill-2" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="borderfill-3" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="borderfill-4" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+          </table>
+          <p class="Normal parashape-1">&#13;</p>
+          <table cellspacing="0" class="TableControl borderfill-2" style="  width: 148mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
+            <tr>
+              <td class="borderfill-7" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="borderfill-6" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="borderfill-8" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+          </table>
           <p class="Normal parashape-1">
             <span/>
           </p>
