--- a/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.xhtml
@@ -15,4 +15,4 @@
   padding-top: 15mm;
   padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span></span></p></div><div class="GShapeObject"><p class="Normal"><span></span></p></div><div class="GShapeObject"><p class="Normal"><span></span></p></div>&#13;</p></div></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1">&#13;</p><div class="GShapeObjectControl" style="  width: 30mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;"><p class="Normal"><span></span></p></div><div class="GShapeObjectControl" style="  width: 56mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;"><p class="Normal"><span></span></p></div><div class="GShapeObjectControl" style="  width: 56mm;&#10;/* hrelto: page halign: left*/  margin-left: 20mm;&#10;"><p class="Normal"><span></span></p></div></div></div></div></body></html>
