--- a/pyhwp-tests/hwp5_tests/fixtures/shapeline.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapeline.html.d/index.xhtml
@@ -15,4 +15,4 @@
   padding-top: 15mm;
   padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"></div><div class="GShapeObject"></div>&#13;</p></div></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1">&#13;</p><div class="GShapeObjectControl" style="  width: 7mm;&#10;/* hrelto: paper halign: left*/  margin-left: 3mm;&#10;"></div><div class="GShapeObjectControl" style="  width: 52mm;&#10;/* hrelto: paper halign: left*/  margin-left: 4mm;&#10;"></div></div></div></div></body></html>
