--- a/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.formatted.xhtml
@@ -25,7 +25,22 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span/></p></div><div class="GShapeObject"><p class="Normal"><span/></p></div><div class="GShapeObject"><p class="Normal"><span/></p></div>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 30mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;">
+            <p class="Normal">
+              <span/>
+            </p>
+          </div>
+          <div class="GShapeObjectControl" style="  width: 56mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;">
+            <p class="Normal">
+              <span/>
+            </p>
+          </div>
+          <div class="GShapeObjectControl" style="  width: 56mm;&#10;/* hrelto: page halign: left*/  margin-left: 20mm;&#10;">
+            <p class="Normal">
+              <span/>
+            </p>
+          </div>
         </div>
       </div>
     </div>
