--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
@@ -34,17 +34,50 @@
             <span/>
           </p>
           <p class="Body"><span>본문 </span><span class="charshape-5">내용</span><span>입니다. 본 문서는 ᄒᆞᆫ글 워드 프로세서의 파일 저장 형식 중, ᄒᆞᆫ글 2002</span><span> 이후 제품에서 사용되는 ᄒᆞᆫ글 문서 파일 형식 5.0 및 ᄒᆞᆫ글 97 문서 파일 형식, </span><span>HWPML에 관하여 설명한다.</span>&#13;</p>
-          <p class="Body"><span>표</span><table cellspacing="0" class="borderfill-4" style="border-collapse:collapse;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>A0</span>&#13;</p></td><td class="borderfill-3" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>B0</span>&#13;</p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>A1</span>&#13;</p></td><td class="borderfill-5" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>B10</span>&#13;</p><p class="Normal"><span>B11</span>&#13;</p></td></tr></table><span>표</span><span class="charshape-5">끝</span><table cellspacing="0" class="borderfill-1" style="border-collapse:collapse;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:405.39pt; height:41.12pt;"><p class="Normal"><span>table2</span>&#13;</p></td></tr></table>&#13;</p>
-          <p class="Body"><table cellspacing="0" class="borderfill-1" style="border-collapse:collapse;"><caption class="TableCaption" style="caption-side: bottom;"><p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">3</span><span> 2x2짜리표</span>&#13;</p><p class="Normal"><span>가나다</span>&#13;</p></caption><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span/></p></td><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span/></p></td><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span/></p></td></tr></table>&#13;</p>
+          <p class="Body"><span>표</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-4" style="  width: 143mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>A0</span>&#13;</p></td><td class="borderfill-3" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>B0</span>&#13;</p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>A1</span>&#13;</p></td><td class="borderfill-5" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>B10</span>&#13;</p><p class="Normal"><span>B11</span>&#13;</p></td></tr></table></span><span>표</span><span class="charshape-5">끝</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 143mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:405.39pt; height:41.12pt;"><p class="Normal"><span>table2</span>&#13;</p></td></tr></table></span>&#13;</p>
+          <p class="Body">&#13;</p>
+          <table cellspacing="0" class="TableControl borderfill-1" style="  width: 143mm;&#10;/* hrelto: paragraph halign: left*/  margin-left: 6mm;&#10;  border-collapse: collapse;&#10;">
+            <caption class="TableCaption" style="caption-side: bottom;">
+              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">3</span><span> 2x2짜리표</span>&#13;</p>
+              <p class="Normal"><span>가나다</span>&#13;</p>
+            </caption>
+            <tr>
+              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+          </table>
           <p class="Body"><span>다음 문단</span>&#13;</p>
           <p class="Body">
             <span/>
           </p>
           <p class="Body"><span>본 </span><span class="charshape-6">문서</span><span>는 먼저 ᄒᆞᆫ글 문서 파일 형식 5.0에 관하여 설명한 후, ᄒᆞᆫ글 97 </span><span>문서 파일 형식, HWPML에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내</span><span>의 주요한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.</span>&#13;</p>
-          <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN0002.jpg" style="width: 163.5pt; height: 98.1pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 58mm;&#10;/* hrelto: column halign: left*/  margin-left: 39mm;&#10;">
+            <img src="bindata/BIN0002.jpg" style="width: 163.5pt; height: 98.1pt;"/>
+          </div>
           <p class="Endnote parashape-12"><span>미주입니다.</span>&#13;</p>
           <p class="Footnote parashape-14"><span>이건 각주이지요.</span>&#13;</p>
-          <p class="Normal parashape-0"><span>다음 페이지</span><div class="GShapeObject"><img src="bindata/BIN0003.png" style="width: 12pt; height: 12pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>다음 페이지</span><span class="GShapeObjectControl" style="  width: 4mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN0003.png" style="width: 12pt; height: 12pt;"/></span>&#13;</p>
         </div>
       </div>
     </div>
