--- a/pyhwp-tests/hwp5_tests/fixtures/shapecomponent-rect-fill.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapecomponent-rect-fill.html.d/index.formatted.xhtml
@@ -25,12 +25,18 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><div class="GShapeObject"/>&#13;</p>
-          <p class="Normal parashape-1"><div class="GShapeObject"/>&#13;</p>
-          <p class="Normal parashape-1"><div class="GShapeObject"/>&#13;</p>
-          <p class="Normal parashape-1"><div class="GShapeObject"/>&#13;</p>
-          <p class="Normal parashape-1"><div class="GShapeObject"/>&#13;</p>
-          <p class="Normal parashape-1"><div class="GShapeObject"/>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 11mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;"/>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 11mm;&#10;/* hrelto: page halign: left*/  margin-left: 5mm;&#10;"/>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 11mm;&#10;/* hrelto: page halign: left*/  margin-left: 10mm;&#10;"/>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 11mm;&#10;/* hrelto: page halign: left*/  margin-left: 15mm;&#10;"/>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 11mm;&#10;/* hrelto: page halign: left*/  margin-left: 20mm;&#10;"/>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 11mm;&#10;/* hrelto: page halign: left*/  margin-left: 25mm;&#10;"/>
         </div>
       </div>
     </div>
