--- a/pyhwp-tests/hwp5_tests/fixtures/shapeline.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapeline.html.d/index.formatted.xhtml
@@ -25,7 +25,9 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><div class="GShapeObject"/><div class="GShapeObject"/>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 7mm;&#10;/* hrelto: paper halign: left*/  margin-left: 3mm;&#10;"/>
+          <div class="GShapeObjectControl" style="  width: 52mm;&#10;/* hrelto: paper halign: left*/  margin-left: 4mm;&#10;"/>
         </div>
       </div>
     </div>
