--- a/pyhwp-tests/hwp5_tests/fixtures/shapepict-scaled.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapepict-scaled.html.d/index.formatted.xhtml
@@ -25,8 +25,14 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><div class="GShapeObject"><img src="bindata/BIN0002.jpg" style="width: 375pt; height: 225pt;"/></div>&#13;</p>
-          <p class="Normal parashape-1"><div class="GShapeObject"><img src="bindata/BIN0002.jpg" style="width: 187.5pt; height: 112.5pt;"/></div>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 132mm;&#10;/* hrelto: column halign: left*/  margin-left: 0mm;&#10;">
+            <img src="bindata/BIN0002.jpg" style="width: 375pt; height: 225pt;"/>
+          </div>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 66mm;&#10;/* hrelto: column halign: left*/  margin-left: 0mm;&#10;">
+            <img src="bindata/BIN0002.jpg" style="width: 187.5pt; height: 112.5pt;"/>
+          </div>
         </div>
       </div>
     </div>
