--- a/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.formatted.xhtml
@@ -25,7 +25,13 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><div class="GShapeObject"/><div class="GShapeObject"><p class="Normal parashape-12"><span>글 상자</span>&#13;</p></div><div class="GShapeObject"/><div class="GShapeObject"/>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 42mm;&#10;/* hrelto: paper halign: left*/  margin-left: 9mm;&#10;"/>
+          <div class="GShapeObjectControl" style="  width: 71mm;&#10;/* hrelto: paper halign: left*/  margin-left: 10mm;&#10;">
+            <p class="Normal parashape-12"><span>글 상자</span>&#13;</p>
+          </div>
+          <div class="GShapeObjectControl" style="  width: 35mm;&#10;/* hrelto: paper halign: left*/  margin-left: 11mm;&#10;"/>
+          <div class="GShapeObjectControl" style="  width: 41mm;&#10;/* hrelto: paper halign: left*/  margin-left: 11mm;&#10;"/>
         </div>
       </div>
     </div>
