--- a/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
@@ -25,7 +25,33 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal"><span/></p></td><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal"><span/></p></td><td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;"><p class="Normal"><span/></p></td></tr></table>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <table cellspacing="0" class="TableControl borderfill-2" style="  width: 40mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
+            <tr>
+              <td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+              <td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+              <td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;">
+                <p class="Normal">
+                  <span/>
+                </p>
+              </td>
+            </tr>
+          </table>
           <p class="Normal parashape-1">
             <span/>
           </p>
