--- a/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
@@ -25,7 +25,11 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span class="autonumbering autonumbering-picture">1</span><span> 캡션</span>&#13;</p><p class="Normal"><span>글상자</span>&#13;</p></div>&#13;</p>
+          <p class="Normal parashape-1">&#13;</p>
+          <div class="GShapeObjectControl" style="  width: 41mm;&#10;/* hrelto: paper halign: left*/  margin-left: 4mm;&#10;">
+            <p class="Normal"><span>그림 </span><span class="autonumbering autonumbering-picture">1</span><span> 캡션</span>&#13;</p>
+            <p class="Normal"><span>글상자</span>&#13;</p>
+          </div>
         </div>
       </div>
     </div>
