xsl/html: enhance TableCaption

--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
@@ -27,7 +27,7 @@
         <div class="Page">
           <p class="Normal parashape-11">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-2" style="  width: 148mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> </span>&#13;</p>
             </caption>
             <tr>
