--- a/pyhwp-tests/hwp5_tests/fixtures/table-position.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table-position.html.d/index.formatted.xhtml
@@ -26,10 +26,10 @@
       <div class="HeaderPageFooter">
         <div class="Page">
           <p class="Normal parashape-4">&#13;</p>
-          <p class="Normal parashape-4"><span>전</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 148mm;&#10;  border-collapse: collapse;&#10;"><caption class="TableCaption" style="caption-side: bottom;"><p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> 여백 0mm, 글자처럼 취급</span>&#13;</p></caption><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td></tr></table></span><span>후</span>&#13;</p>
+          <p class="Normal parashape-4"><span>전</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 148mm;&#10;  border-collapse: collapse;&#10;"><caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;"><p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> 여백 0mm, 글자처럼 취급</span>&#13;</p></caption><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span/></p></td></tr></table></span><span>후</span>&#13;</p>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: paragraph halign: left*/  margin-left: 18.53mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">2</span><span> 여백 10mm, 문단 왼쪽부터 5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -59,7 +59,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 15mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">3</span><span> 여백 10mm, 단 왼쪽부터 5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -89,7 +89,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: page halign: left*/  margin-left: 15mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">4</span><span> 여백 10mm, 쪽 왼쪽부터 5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -119,7 +119,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: paper halign: left*/  margin-left: 15mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">5</span><span> 여백 10mm, 종이 왼쪽부터 35mm</span>&#13;</p>
             </caption>
             <tr>
@@ -149,7 +149,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: paragraph halign: right*/  margin-left: 57.47mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">6</span><span> 여백 10mm, 문단 오른쪽부터 </span><span>5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -179,7 +179,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: right*/  margin-left: 61mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">7</span><span> 여백 10mm, 단 오른쪽부터 5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -209,7 +209,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: page halign: right*/  margin-left: 61mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">8</span><span> 여백 10mm, 쪽 오른쪽부터 5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -239,7 +239,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: paper halign: right*/  margin-left: 61mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">9</span><span> 여백 10mm, 종이 오른쪽부터 </span><span>35mm</span>&#13;</p>
             </caption>
             <tr>
@@ -269,7 +269,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: paragraph halign: center*/  margin-left: 46.53mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">10</span><span> 여백 10mm, 문단 가운데로부터 </span><span>5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -299,7 +299,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: center*/  margin-left: 43mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">11</span><span> 여백 10mm, 단 가운데로부터 </span><span>5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -329,7 +329,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: page halign: center*/  margin-left: 43mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">12</span><span> 여백 10mm, 쪽 가운데로부터 </span><span>5mm</span>&#13;</p>
             </caption>
             <tr>
@@ -359,7 +359,7 @@
           </table>
           <p class="Normal parashape-4">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: paper halign: center*/  margin-left: 43mm;&#10;  border-collapse: collapse;&#10;">
-            <caption class="TableCaption" style="caption-side: bottom;">
+            <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">13</span><span> 여백 10mm, 종이 가운데로부터 </span><span>5mm</span>&#13;</p>
             </caption>
             <tr>
