xsl/html: ShapeComponent css-with/height in mm

--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
@@ -73,11 +73,11 @@
           <p class="Body"><span>본 </span><span class="charshape-6">문서</span><span>는 먼저 ᄒᆞᆫ글 문서 파일 형식 5.0에 관하여 설명한 후, ᄒᆞᆫ글 97 </span><span>문서 파일 형식, HWPML에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내</span><span>의 주요한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.</span>&#13;</p>
           <p class="Normal parashape-0">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 58mm;&#10;/* hrelto: column halign: left*/  margin-left: 39mm;&#10;">
-            <img src="bindata/BIN0002.jpg" style="width: 163.5pt; height: 98.1pt;"/>
+            <img src="bindata/BIN0002.jpg" style="  width: 58mm;&#10;   height: 35mm;&#10;"/>
           </div>
           <p class="Endnote parashape-12"><span>미주입니다.</span>&#13;</p>
           <p class="Footnote parashape-14"><span>이건 각주이지요.</span>&#13;</p>
-          <p class="Normal parashape-0"><span>다음 페이지</span><span class="GShapeObjectControl" style="  width: 4mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN0003.png" style="width: 12pt; height: 12pt;"/></span>&#13;</p>
+          <p class="Normal parashape-0"><span>다음 페이지</span><span class="GShapeObjectControl" style="  width: 4mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN0003.png" style="  width: 4mm;&#10;   height: 4mm;&#10;"/></span>&#13;</p>
         </div>
       </div>
     </div>
