--- a/pyhwp-tests/hwp5_tests/fixtures/shapepict-scaled.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapepict-scaled.html.d/index.formatted.xhtml
@@ -27,11 +27,11 @@
         <div class="Page">
           <p class="Normal parashape-1">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 132mm;&#10;/* hrelto: column halign: left*/  margin-left: 0mm;&#10;">
-            <img src="bindata/BIN0002.jpg" style="width: 375pt; height: 225pt;"/>
+            <img src="bindata/BIN0002.jpg" style="  width: 132mm;&#10;   height: 79mm;&#10;"/>
           </div>
           <p class="Normal parashape-1">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 66mm;&#10;/* hrelto: column halign: left*/  margin-left: 0mm;&#10;">
-            <img src="bindata/BIN0002.jpg" style="width: 187.5pt; height: 112.5pt;"/>
+            <img src="bindata/BIN0002.jpg" style="  width: 66mm;&#10;   height: 40mm;&#10;"/>
           </div>
         </div>
       </div>
