--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
@@ -31,7 +31,7 @@
               <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> </span>&#13;</p>
             </caption>
             <tr>
-              <td class="borderfill-2" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;">
+              <td class="borderfill-2" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal parashape-12"><span>다단 다단 다단 다단 다단 다단 다단 다단 </span><span>다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p>
               </td>
             </tr>
