--- a/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
@@ -28,24 +28,24 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-2" style="  width: 39.99mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
             <tr>
-              <td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;">
+              <td class="borderfill-2" colspan="1" rowspan="1" style="  width: 13.33mm;&#10;  height: 25mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
               </td>
-              <td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;">
+              <td class="borderfill-2" colspan="1" rowspan="1" style="  width: 13.33mm;&#10;  height: 25mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
               </td>
-              <td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;">
+              <td class="borderfill-2" colspan="1" rowspan="2" style="  width: 13.33mm;&#10;  height: 50mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
               </td>
             </tr>
             <tr>
-              <td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;">
+              <td class="borderfill-2" colspan="2" rowspan="1" style="  width: 26.66mm;&#10;  height: 25mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
