--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
@@ -34,7 +34,7 @@
             <span/>
           </p>
           <p class="Body"><span>본문 </span><span class="charshape-5">내용</span><span>입니다. 본 문서는 ᄒᆞᆫ글 워드 프로세서의 파일 저장 형식 중, ᄒᆞᆫ글 2002</span><span> 이후 제품에서 사용되는 ᄒᆞᆫ글 문서 파일 형식 5.0 및 ᄒᆞᆫ글 97 문서 파일 형식, </span><span>HWPML에 관하여 설명한다.</span>&#13;</p>
-          <p class="Body"><span>표</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-4" style="  width: 142.71mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>A0</span>&#13;</p></td><td class="borderfill-3" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>B0</span>&#13;</p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>A1</span>&#13;</p></td><td class="borderfill-5" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;"><p class="Normal"><span>B10</span>&#13;</p><p class="Normal"><span>B11</span>&#13;</p></td></tr></table></span><span>표</span><span class="charshape-5">끝</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 143.01mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="width:405.39pt; height:41.12pt;"><p class="Normal"><span>table2</span>&#13;</p></td></tr></table></span>&#13;</p>
+          <p class="Body"><span>표</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-4" style="  width: 142.71mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>A0</span>&#13;</p></td><td class="borderfill-3" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>B0</span>&#13;</p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>A1</span>&#13;</p></td><td class="borderfill-5" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>B10</span>&#13;</p><p class="Normal"><span>B11</span>&#13;</p></td></tr></table></span><span>표</span><span class="charshape-5">끝</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 143.01mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 143.01mm;&#10;  height: 14.51mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>table2</span>&#13;</p></td></tr></table></span>&#13;</p>
           <p class="Body">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 142.71mm;&#10;/* hrelto: paragraph halign: left*/  margin-left: 6.29mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="caption-side: bottom;">
@@ -42,24 +42,24 @@
               <p class="Normal"><span>가나다</span>&#13;</p>
             </caption>
             <tr>
-              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+              <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
               </td>
-              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+              <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
               </td>
             </tr>
             <tr>
-              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+              <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
               </td>
-              <td class="borderfill-1" colspan="1" rowspan="1" style="width:202.27pt; height:2.82pt;">
+              <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
                 <p class="Normal">
                   <span/>
                 </p>
