xmlmodel: Text "lang" attributes, but making nested format very slow

--- a/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.formatted.xhtml
@@ -39,14 +39,14 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="HeaderArea">
-          <p class="Header"><span>Header 이것은 머리말입니다</span><span class="autonumbering autonumbering-page">1</span><span>.</span>&#13;</p>
+          <p class="Header"><span>Header </span><span>이것은 머리말입니다</span><span class="autonumbering autonumbering-page">1</span><span>.</span>&#13;</p>
         </div>
         <div class="Page">
           <p class="Normal parashape-9"><span>첫 페이지</span>&#13;</p>
           <p class="Normal parashape-9">&#13;</p>
         </div>
         <div class="FooterArea">
-          <p class="Header"><span>Footer 이것은 꼬리말입니다.</span>&#13;</p>
+          <p class="Header"><span>Footer </span><span>이것은 꼬리말입니다.</span>&#13;</p>
         </div>
       </div>
     </div>
