--- a/pyhwp-tests/hwp5_tests/fixtures/issue30.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/issue30.html.d/index.formatted.xhtml
@@ -25,7 +25,7 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><span>ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들</span><span>이 들어가는 현상이 발생한다. 아마도 변환 과정에서 xmllint의 reindent 때문에 new line </span><span>문자가 들어가는 것 같음.</span>&#13;</p>
+          <p class="Normal parashape-1"><span>ODT </span><span>변환 시 원문에 없는 공백이 띄엄띄엄 나타남 </span><span>ODT </span><span>변환 시 중간 중간에 공백 문자들</span><span>이 들어가는 현상이 발생한다. 아마도 변환 과정에서 </span><span>xmllint</span><span>의 </span><span>reindent </span><span>때문에 </span><span>new line </span><span>문자가 들어가는 것 같음.</span>&#13;</p>
         </div>
       </div>
     </div>
