--- a/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.formatted.xhtml
@@ -27,19 +27,13 @@
         <div class="Page">
           <p class="Normal parashape-1">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 30mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;">
-            <p class="Normal">
-              <span/>
-            </p>
+            <p class="Normal"/>
           </div>
           <div class="GShapeObjectControl" style="  width: 55.98mm;&#10;/* hrelto: page halign: left*/  margin-left: 0mm;&#10;">
-            <p class="Normal">
-              <span/>
-            </p>
+            <p class="Normal"/>
           </div>
           <div class="GShapeObjectControl" style="  width: 55.98mm;&#10;/* hrelto: page halign: left*/  margin-left: 20mm;&#10;">
-            <p class="Normal">
-              <span/>
-            </p>
+            <p class="Normal"/>
           </div>
         </div>
       </div>
