--- a/pyhwp-tests/hwp5_tests/fixtures/table-caption.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table-caption.html.d/index.formatted.xhtml
@@ -32,9 +32,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -45,9 +43,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -58,9 +54,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -71,9 +65,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -84,9 +76,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -97,9 +87,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -111,9 +99,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -124,9 +110,7 @@
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
