--- a/pyhwp-tests/hwp5_tests/fixtures/borderfill.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/borderfill.html.d/index.formatted.xhtml
@@ -29,23 +29,17 @@
           <table cellspacing="0" class="TableControl borderfill-2" style="  width: 148mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
             <tr>
               <td class="borderfill-2" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
             <tr>
               <td class="borderfill-3" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
             <tr>
               <td class="borderfill-4" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
@@ -53,29 +47,21 @@
           <table cellspacing="0" class="TableControl borderfill-2" style="  width: 148mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
             <tr>
               <td class="borderfill-7" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
             <tr>
               <td class="borderfill-6" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
             <tr>
               <td class="borderfill-8" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal">
-                  <span/>
-                </p>
+                <p class="Normal"/>
               </td>
             </tr>
           </table>
-          <p class="Normal parashape-1">
-            <span/>
-          </p>
+          <p class="Normal parashape-1"/>
         </div>
       </div>
     </div>
