--- a/pyhwp-tests/hwp5_tests/fixtures/lists-bullet.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/lists-bullet.html.d/index.formatted.xhtml
@@ -101,42 +101,42 @@
           <p class="Normal parashape-3 Bullet-1"><span>1</span>&#13;</p>
           <p class="Normal parashape-3 Bullet-1"><span>2</span>&#13;</p>
           <p class="Normal parashape-3 Bullet-1"><span>3</span>&#13;</p>
-          <p class="Normal parashape-1"><span>글머리표 사용자정의 ☀</span>&#13;</p>
-          <p class="Normal parashape-19 Bullet-18"><span>너비 10pt</span>&#13;</p>
+          <p class="Normal parashape-1"><span>글머리표 사용자정의 </span><span>☀</span>&#13;</p>
+          <p class="Normal parashape-19 Bullet-18"><span>너비 10</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-19 Bullet-18"><span>정렬 가운데</span>&#13;</p>
           <p class="Normal parashape-19 Bullet-18"><span>본문과의 간격 50%</span>&#13;</p>
           <p class="Normal parashape-19 Bullet-18"><span>자동 내어쓰기</span>&#13;</p>
           <p class="Normal parashape-19 Bullet-18"><span>글자모양 없음</span>&#13;</p>
-          <p class="Normal parashape-1"><span>글머리표 사용자정의 ☀</span>&#13;</p>
-          <p class="Normal parashape-20 Bullet-19"><span>너비 10pt</span>&#13;</p>
+          <p class="Normal parashape-1"><span>글머리표 사용자정의 </span><span>☀</span>&#13;</p>
+          <p class="Normal parashape-20 Bullet-19"><span>너비 10</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-20 Bullet-19"><span>정렬 오른쪽</span>&#13;</p>
           <p class="Normal parashape-20 Bullet-19"><span>본문과의 간격 50%</span>&#13;</p>
           <p class="Normal parashape-20 Bullet-19"><span>자동 내어쓰기</span>&#13;</p>
           <p class="Normal parashape-20 Bullet-19"><span>글자모양 없음</span>&#13;</p>
-          <p class="Normal parashape-1"><span>글머리표 사용자정의 ☀</span>&#13;</p>
-          <p class="Normal parashape-21 Bullet-20"><span>너비 20pt</span>&#13;</p>
+          <p class="Normal parashape-1"><span>글머리표 사용자정의 </span><span>☀</span>&#13;</p>
+          <p class="Normal parashape-21 Bullet-20"><span>너비 20</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-21 Bullet-20"><span>정렬 왼쪽</span>&#13;</p>
           <p class="Normal parashape-21 Bullet-20"><span>본문과의 간격 50%</span>&#13;</p>
           <p class="Normal parashape-21 Bullet-20"><span>자동 내어쓰기</span>&#13;</p>
           <p class="Normal parashape-21 Bullet-20"><span>글자모양 없음</span>&#13;</p>
-          <p class="Normal parashape-1"><span>글머리표 사용자정의 ☀</span>&#13;</p>
-          <p class="Normal parashape-22 Bullet-21"><span>너비 10pt</span>&#13;</p>
+          <p class="Normal parashape-1"><span>글머리표 사용자정의 </span><span>☀</span>&#13;</p>
+          <p class="Normal parashape-22 Bullet-21"><span>너비 10</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-22 Bullet-21"><span>정렬 왼쪽</span>&#13;</p>
           <p class="Normal parashape-22 Bullet-21"><span>본문과의 간격 0%</span>&#13;</p>
           <p class="Normal parashape-22 Bullet-21"><span>자동 내어쓰기</span>&#13;</p>
           <p class="Normal parashape-22 Bullet-21"><span>글자모양 없음</span>&#13;</p>
-          <p class="Normal parashape-1"><span>글머리표 사용자정의 ☀</span>&#13;</p>
-          <p class="Normal parashape-23 Bullet-22"><span>너비 10pt</span>&#13;</p>
+          <p class="Normal parashape-1"><span>글머리표 사용자정의 </span><span>☀</span>&#13;</p>
+          <p class="Normal parashape-23 Bullet-22"><span>너비 10</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-23 Bullet-22"><span>정렬 왼쪽</span>&#13;</p>
           <p class="Normal parashape-23 Bullet-22"><span>본문과의 간격 0%</span>&#13;</p>
-          <p class="Normal parashape-23 Bullet-22"><span>자동 내어쓰기 X</span>&#13;</p>
+          <p class="Normal parashape-23 Bullet-22"><span>자동 내어쓰기 </span><span>X</span>&#13;</p>
           <p class="Normal parashape-23 Bullet-22"><span>글자모양 없음</span>&#13;</p>
-          <p class="Normal parashape-1"><span>글머리표 사용자정의 ☀</span>&#13;</p>
-          <p class="Normal parashape-23 Bullet-22"><span>너비 10pt</span>&#13;</p>
+          <p class="Normal parashape-1"><span>글머리표 사용자정의 </span><span>☀</span>&#13;</p>
+          <p class="Normal parashape-23 Bullet-22"><span>너비 10</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-23 Bullet-22"><span>정렬 왼쪽</span>&#13;</p>
           <p class="Normal parashape-23 Bullet-22"><span>본문과의 간격 0%</span>&#13;</p>
-          <p class="Normal parashape-23 Bullet-22"><span>자동 내어쓰기 X</span>&#13;</p>
-          <p class="Normal parashape-23 Bullet-22"><span>새 글머리표 모양: sun</span>&#13;</p>
+          <p class="Normal parashape-23 Bullet-22"><span>자동 내어쓰기 </span><span>X</span>&#13;</p>
+          <p class="Normal parashape-23 Bullet-22"><span>새 글머리표 모양: </span><span>sun</span>&#13;</p>
         </div>
       </div>
     </div>
