--- a/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.formatted.xhtml
@@ -27,8 +27,8 @@
         <div class="Page">
           <p class="Normal parashape-14"><span>문단1</span>&#13;</p>
           <p class="Normal"><span>문단2</span>&#13;</p>
-          <p class="Normal parashape-12"><span>문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span>여쓰기 10pt 들여쓰기 10pt</span>&#13;</p>
-          <p class="Normal parashape-13"><span>문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span>쓰기 10pt 내어쓰기 10pt</span>&#13;</p>
+          <p class="Normal parashape-12"><span>문단3 - 들여쓰기 10</span><span>pt </span><span>들여쓰기 10</span><span>pt </span><span>들여쓰기 10</span><span>pt </span><span>들여쓰기 10</span><span>pt </span><span>들여쓰기 10</span><span>pt </span><span>들</span><span>여쓰기 10</span><span>pt </span><span>들여쓰기 10</span><span>pt</span>&#13;</p>
+          <p class="Normal parashape-13"><span>문단4 - 내어쓰기 10</span><span>pt </span><span>내어쓰기 10</span><span>pt </span><span>내어쓰기 10</span><span>pt </span><span>내어쓰기 10</span><span>pt </span><span>내어쓰기 10</span><span>pt </span><span>내어</span><span>쓰기 10</span><span>pt </span><span>내어쓰기 10</span><span>pt</span>&#13;</p>
           <p class="Normal parashape-15"><span>문단 5</span>&#13;</p>
           <p class="Normal parashape-16"><span>문단 6</span>&#13;</p>
           <p class="Normal parashape-17"><span>문단 7</span>&#13;</p>
