--- a/pyhwp-tests/hwp5_tests/fixtures/viewtext.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/viewtext.html.d/index.formatted.xhtml
@@ -25,7 +25,7 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><span>pyhwp 테스트를 위한 배포 문서 예제입니다.</span>&#13;</p>
+          <p class="Normal parashape-1"><span>pyhwp </span><span>테스트를 위한 배포 문서 예제입니다.</span>&#13;</p>
         </div>
       </div>
     </div>
